# codexbar-plasmoid

./: .gitignore  LICENSE  README.md
.agents/: AGENTS.md
.agents/skills/codexbar-cli-bridge/: SKILL.md
.agents/skills/codexbar-cli-bridge/agents/: openai.yaml
.agents/skills/codexbar-cli-bridge/references/: mock-data.md
.agents/skills/kde-dev-tools/: SKILL.md
.agents/skills/kde-plasma-api/: SKILL.md
.agents/skills/kde-plasmoid-workflow/: SKILL.md
.agents/skills/kde-plasmoid-workflow/agents/: openai.yaml
.agents/skills/kde-plasmoid-workflow/references/: validation.md
.agents/skills/qml-qt-quick-reference/: SKILL.md
native-cli/: Cargo.toml
native-cli/src/: config.rs  cookies.rs  http.rs  main.rs  opencodego_local.rs  output.rs
native-cli/src/providers/: antigravity.rs  cursor.rs  devin.rs  mod.rs  opencode.rs  opencode_shared.rs  opencodego.rs
plasmoid/: metadata.json
plasmoid/contents/code/: codexbar-cli-updater.mjs  codexbar-plasmoid-helper.mjs
plasmoid/contents/config/: main.xml
plasmoid/contents/ui/: CompactRepresentation.qml  CompactUsageBars.qml  HistoryChart.qml  MetricLine.qml  ProviderCard.qml  ProviderSwitcher.qml  StatusBadge.qml  UsageBarRow.qml  configGeneral.qml  main.qml
scripts/: build-native-cli.sh  install-plasmoid.sh  run-windowed.sh
