[package]
name = "splazma-codexbar"
version = "0.1.0"
edition = "2021"
description = "Linux-native usage fetcher for Cursor, OpenCode, and OpenCode Go"

[[bin]]
name = "splazma-codexbar"
path = "src/main.rs"

[dependencies]
aes = "0.8"
anyhow = "1"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
block-padding = "0.3"
dirs = "5"
pbkdf2 = "0.12"
regex = "1"
sha1 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
